--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-data-grid": "^8.9.1",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "motion": "^12.19.1",
@@ -22,6 +23,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.1.0",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
